# CacheCleaner

./: CMakeLists.txt  install_service.bat  uninstall_service.bat
gui/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  app.manifest  ipc_client.cpp  ipc_client.h  main.cpp  resource.h  resources.rc  tray_icon.cpp  tray_icon.h
service/: CMakeLists.txt  memory_cleaner.cpp  memory_cleaner.h  service_main.cpp
